<resources>
    <string name="app_name">Matrix</string>
    <string name="login">Login</string>

    <string name="email">Email</string>

    <string name="invalid_email">enter a valid email address</string>
    <string name="password_error">enter a valid email password</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="password">Password</string>
    <string name="goal_tracker">Goal Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="default_notification_channel_id">general_notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Contact</string>
    <string name="profile_pic_url">Profile Picture url</string>
    <string name="phone_error">please enter phone number</string>
    <string name="photo_error">Please enter valid url</string>
    <string name="name_error">Please enter valid name</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="profile">Profile</string>
    <string name="title_activity_add_users">AddUsersActivity</string>
    <string name="create">Create</string>
    <string name="title_activity_logs">LogsActivity</string>


</resources>
